// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`npm package resource e2e npm package resource test: NPMPackage create 1`] = `
Object {
  "_message": "Installed NPM package is-sorted@1.0.0",
  "description": "mock package",
  "id": "is-sorted",
  "name": "is-sorted",
  "version": "1.0.0",
}
`;

exports[`npm package resource e2e npm package resource test: NPMPackage create plan 1`] = `
Object {
  "currentState": undefined,
  "describe": "Install is-sorted@1.0.0",
  "newState": "is-sorted@1.0.0",
}
`;

exports[`npm package resource e2e npm package resource test: NPMPackage destroy 1`] = `
Object {
  "_message": "Installed NPM package is-sorted@1.0.2",
  "description": "mock package",
  "id": "is-sorted",
  "name": "is-sorted",
  "version": "1.0.2",
}
`;

exports[`npm package resource e2e npm package resource test: NPMPackage update 1`] = `
Object {
  "_message": "Installed NPM package is-sorted@1.0.2",
  "description": "mock package",
  "id": "is-sorted",
  "name": "is-sorted",
  "version": "1.0.2",
}
`;

exports[`npm package resource e2e npm package resource test: NPMPackage update plan 1`] = `
Object {
  "currentState": "is-sorted@1.0.0",
  "describe": "Install is-sorted@1.0.2",
  "newState": "is-sorted@1.0.2",
}
`;

exports[`npm package resource installs 2 resources, one prod & one dev 1`] = `
Object {
  "_message": "Installed NPM package foo@latest",
  "description": "mock package",
  "id": "foo",
  "name": "foo",
  "version": "latest",
}
`;

exports[`npm package resource installs 2 resources, one prod & one dev 2`] = `
Object {
  "_message": "Installed NPM package bar@latest",
  "description": "mock package",
  "id": "bar",
  "name": "bar",
  "version": "latest",
}
`;

exports[`package manager client commands generates the correct commands for npm 1`] = `
Array [
  "install",
  "gatsby",
]
`;

exports[`package manager client commands generates the correct commands for npm 2`] = `
Array [
  "install",
  "--save-dev",
  "eslint",
]
`;

exports[`package manager client commands generates the correct commands for yarn 1`] = `
Array [
  "add",
  "-W",
  "gatsby",
]
`;

exports[`package manager client commands generates the correct commands for yarn 2`] = `
Array [
  "add",
  "-W",
  "--dev",
  "eslint",
]
`;
